Isolate typeinference8 changes: revert non-typeinference8 files to master state
Agent-Logs-Url: https://github.com/eisop/checker-framework/sessions/b80a1afb-33ac-42db-8dd6-e19bdb30aa96

Co-authored-by: wmdietl <6699136+wmdietl@users.noreply.github.com>